ring-{checkbox|radio-btn} form align fix
Former-commit-id: 58d5d18758977b3f2259123efce5e359c5e88f7a

--- a/blocks/form/_form.scss
+++ b/blocks/form/_form.scss
@@ -285,11 +285,17 @@
 }
 
 .ring-form__label {
-  float: left;
+  position: relative;
+  top: 0;
   display: inline;
+  float: left;
+
   height: 3 * $ring-unit;
   line-height: 3 * $ring-unit;
   vertical-align: middle;
+  & .ring-checkbox__label, & .ring-radio-btn__label {
+    top: -2px;
+  }
 }
 
 .ring-form__control {
@@ -314,7 +320,7 @@
   display: none;
 }
 
-.ring-radio-btn[type="radio"] + label {
+.ring-radio-btn[type="radio"] + label.ring-radio-btn__label {
   content: "";
   position: relative;
   display: inline-block;
@@ -329,11 +335,11 @@
   vertical-align: middle;
 }
 
-.ring-radio-btn[type="radio"] + label:hover {
+.ring-radio-btn[type="radio"] + .ring-radio-btn__label:hover {
   border: 1px solid #ff8620;
 }
 
-.ring-radio-btn[type="radio"]:checked + label:after {
+.ring-radio-btn[type="radio"]:checked + .ring-radio-btn__label:after {
   content: "";
   position: absolute;
   top: 3px;
@@ -356,7 +362,7 @@
 //  <div class="ring-form__group ring-form__group_short">
 //    <label class="ring-form__label">
 //      <input class="ring-radio-btn" type="radio" name="find-type" id="breakout-checkbox-1"/>
-//      <label for="breakout-checkbox-1"></label>
+//      <label class="ring-radio-btn__label" for="breakout-checkbox-1"></label>
 //    </label>
 //    <div class="ring-form__control">
 //      <label for="breakout-checkbox-1">Users with same emails and similar names</label>
@@ -365,7 +371,7 @@
 //  <div class="ring-form__group ring-form__group_short">
 //    <label class="ring-form__label">
 //      <input class="ring-radio-btn" type="radio" name="find-type" id="breakout-checkbox-2"/>
-//      <label for="breakout-checkbox-2"></label>
+//      <label class="ring-radio-btn__label" for="breakout-checkbox-2"></label>
 //    </label>
 //    <div class="ring-form__control">
 //      <label for="breakout-checkbox-2">Users with same emails</label>
@@ -373,8 +379,8 @@
 //  </div>
 //  <div class="ring-form__group ring-form__group_short">
 //    <label class="ring-form__label">
-//      <input class="ring-radio-btn" type="radio" name="find-type" id="breakout-checkbox-3"/>
-//      <label for="breakout-checkbox-3"></label>
+//        <input id="short-checkbox-1" class="ring-checkbox" type="checkbox" name="example">
+//        <label class="ring-checkbox__label" for="short-checkbox-1"></label>
 //    </label>
 //    <div class="ring-form__control">
 //      <label for="breakout-checkbox-3">Users having at least something in common</label>
@@ -410,8 +416,10 @@
 }
 
 .ring-checkbox[type="checkbox"] + label.ring-checkbox__label {
-  content: "";
+  position: relative;
   display: inline-block;
+  content: "";
+  // IE hack
   display: none\9;
   width: 11px;
   height: 11px;
@@ -429,9 +437,9 @@
 }
 
 .ring-checkbox[type="checkbox"]:checked + label.ring-checkbox__label {
-  content: "";
   position: relative;
   display: inline-block;
+  content: "";
   width: 11px;
   height: 11px;
 
@@ -481,9 +489,9 @@
   -webkit-appearance: none;
 }
 
-.ring-select + label {
-  content: '';
+.ring-select + label.ring-select__label {
   position: relative;
+  content: '';
   top: -16px;
   left: calc(100% - 18px);
   display: block;
@@ -495,7 +503,7 @@
   border-left: 4px solid transparent;
 }
 
-.ring-select + label {
+.ring-select + label.ring-select__label {
   border: none\9;
 }
 
